Auth: get current user profile